--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <TextView
-        android:id="@+id/View1"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/inputValues"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Code Challenge"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calc" />
+        android:hint="Ange värden i double format"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/inputWindowSize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Fönsterstorlek"
+        android:inputType="number" />
 
     <Button
-        android:id="@+id/calc"
+        android:id="@+id/btnCalculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="256dp"
-        android:text="Button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Beräkna SMA" />
 
     <TextView
-        android:id="@+id/View2"
-        android:layout_width="wrap_content"
+        android:id="@+id/outputResult"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="128dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calc" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:text="Resultat:"
+        android:paddingTop="16dp"
+        android:textSize="16sp" />
+</LinearLayout>
